--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:12345678}
